--- a/TIL/20200320.md
+++ b/TIL/20200320.md
@@ -22,12 +22,14 @@
    소프트웨어의 위기(소프트웨어의 개발에 어러가지 문제점이 나타나기 시작한 상황)를 
    극복하기 위한 방안으로 연구된 학문이며 소프트웨어의 품질과 생산성 향상 목적을 가지고 있다.
 
+---
 ### 2.소프트웨어 생명주기
 
    Software Life Cycle 이라고 하며 소프트웨어 자체를 하나의 생명체로 간주 했을 경우 탄생에서 사망까지의 변환과정을 말한다. 
    SDLC(System Development Life Cycle) 이라고도 한다.  
    소프트웨어 생명주기 단계는 기획 -> 요구 분석 -> 설계 -> 구현 -> 테스트 -> 유지보수 단계로 이루어져 있다.
 
+---
 ### 3. 기획
    Engineering One Pager
    SRS 등의 제법 큰 템플릿을 가진 문서에 정식으로 스펙을 작성하기에는 프로젝트의 규모가 작거나 이슈가 별로 없을 경우에 작성을 한다.
@@ -45,27 +47,176 @@
  - 리소스 및 일정 세부 정보
  - 기술적 설명
 
+---
 ### 4.요구 분석
 
-#### SRS
-
-SRS는 Software Requirements Specification(s)의 약자다. 
+#### SRS란?
+SRS는 Software Requirements Specification(s)의 약자다. <br>
 Specification 혹은 Spec(스펙)이라고도 한다. 
 SRS는 IEEE830에서 문서를 작성하는 가이드가 정의되어 있고, DoD(미국 국방부) 표준 문서이다. 
 회사마다 조금씩 수정해서 자신의 회사에 맞는 템플릿을 별도로 가지고 있지만, 서로 매우 유사하여 SRS는 전세계 표준이라고 할 수 있다.
-SRS를 사용하는 이유
-SRS는 모든 개발의 분야 일정이 예측, 설계, 구현, 테스트의 기준이 되면서, 개발 진행 상황 파악등 의사 소통을 할 수있기 때문이다.
 
+#### SRS에 포함되어야 할 내용
+
+- 구조적 방법과 같은 소프트웨어 요구사항을 개발하기 위해 사용되는 방법
+-  데이터 플로우 다이어그램과 공식적인 규격언어, 요구사항을 표현하는데 사용되는 표기법
+-  요구사항 개발을 위해 사용되는 툴의 사용 제약사항
+-  시스템 프로세스에 파생 요구사항을 제공하기 위한 방법
+
+#### SRS를 사용하는 이유
+
+- SRS는 모든 개발의 분야 일정이 예측, 설계, 구현, 테스트의 기준이 되면서, 개발 진행 상황 파악등 의사 소통을 할 수있다.
+-  전세계 표준 템플릿이라 알맞게 설계할 수 있으며 시간단축도 가능하다.
+-  프로젝트 전체 규모를 파악할 수 있다.
+
+---
 ### 5.설계
 
+#### SDS란?
+Software Design Specification 로 계획, 구현 및 의사 결정을 쉽게 하기 위해 기술된 소프트웨어 설계문서이다.
+SDS는 소프트웨어 설계 정보를 전달하기 위한 매체로 사용된다. 시스템의 설계도나 모델로 간주 될 수도 있다.
+
+#### SDS에 포함되어야 할 내용
+
+- 설계 작성 방법
+- 네이밍 규칙
+- 허용된 설계 방법상에 적용되는 조건 (스케줄링, 인터럽트와 이벤트 기반 아키텍처 사용 등)
+- 디자인 툴 사용에 대한 제약
+- 설계에 대한 제약 (재귀 호출, 데이터 별칭 등)
+- 복잡도 제한 (중첩된 호출, 무조건적인 분기 등)
+
+#### SDS를 사용하는 이유
+
+- 소프트웨어 아키텍처와 하위레벨 요구사항을 개발하기 위해 사용할 수 있다.
+- 위의 항목들로 개발하는 소프트웨어의 특성이나 시스템 특성에 따라 다른 내용이 나올수 있는 만큼 SDS 역시 다양한 형태로 작성 가능하다.
+
+---
 ### 6.구현
 
+#### SCS란?
+Software Code Standards 소프트웨어 코드 표준은 소프트웨어를 코딩하기 위해 사용되는 프로그래밍 언어, 방법, 룰과 툴을 정의한다.
+
+#### SCS에 포함되어야 할 내용
+
+- 사용될 프로그래밍 언어 혹은 정의된 서브셋, 프로그래밍 언어에 대해서는 구문, 데이터 동작, 그리고 언어의 사이드 이펙트를 명백하게 정의하는 데이터
+- 라인 수 제한, 들여쓰기, 그리고 공백라인 사용과 가은 소스코드를 나타내는 것에 대한 표준과 저자명, 리비전 히스토리, 입력, 출력, 영향을 받는 데이터와 같은 소스코드 문서화에 대한 표준
+- 컴포넌트, 서브프로그램, 변수 그리고 상수에 대한 네이밍 규칙 소프트웨어 컴포넌트간의 커플링 정도 그리고 논리 혹은 수치 표현의 복잡도와 같은 허용된 코딩 규칙에 부과되는 조건과 제약, 그리고 그것들을 사용하는 이유
+- 코딩 툴의 사용에 대한 제약
+
+---
 ### 7.테스트
 
+소프트웨어에서 테스트란? 노출되지 않은 숨어있는 결함(Fault)을 찾기 위해 소프트웨어를 작동시키는 일련의 행위와 절차이다.
+즉, 소프트웨어가 문제가 없다를 보이는 것이 아니라 문제가 있다를 밝히는 과정이다. 여기서 결함은 요구사항 설계와 다르게 동작하는 것이다.
+
+#### 소프트웨어 테스트에 일반적으로 적용되는 7원칙
+
+[!]()
+
+#### 테스트의 목적
+
+- 프로그램의 잠재된 오류의 발견
+- 기술적인 기능 및 성능의 확인
+- 사용자 요구 만족도 향상
+- 제품 신뢰도 향상
+
+#### React Component Test?
+
+- 컴포넌트 트리 렌더링: 간략화된 테스팅 환경 및 출력값이 확실한 경우.
+-  완성된 앱에서 테스트: 현실적 브라우저 환경 / E2E(End-to-End) 테스트라고 알려져 있다.
+
+리액트 프로젝트는 컴포넌트 단위로 테스트 로직을 정해줄 수 있다. 리액트 컴포넌트를 테스팅 할 때, 주로 아래와 같은 형식으로 진행한다.
+
+1. 특정 props에 따라 컴포넌트가 잘 렌더링 되는지 확인
+2. 이전에 렌더링 했던 결과와 현재 렌더링 한 결과가 일치하는지 확인
+3. 특정 DOM 이벤트를 예상하여 원하는 변화가 제대로 발생하는지 확인
+4. 렌더링 된 결과물을 이미지로 저장하여 픽셀을 확인하고 일치하는지 확인
+
+4번의 경우에는 스토리북을 이용하여 테스팅하는 것이 효율적이고 편하다. PropTypes를 이용하여 정적 타입 검사를 수행하고, 
+Jest와 같은 단위 테스트 도구를 이용하여 논리적인 검사를 수행할 수 있다.
+
+#### 스토리북이란?
+
+Storybook은 React나 Vue, Angular를 위한 고립된 환경에서 컴포넌트 UI 개발을 위한 오픈소스 툴입니다.
+
+#### 스토리북의 특징
+
+- 고립된 환경에서 UI 컴포넌트 개발로 복잡한 데이터나 비즈니스 로직을 구축하지 않아도 됩니다.
+-  어려운 유스 케이스를 모킹하여 앱에서 재현하기 어려운 상태의 컴포넌트를 렌더링할 수 있습니다.
+-  일관적인 UX를 보장해주며 스토리를 이용해 가시적인 스펙을 손쉽게 만들 수 있다.
+-  매 커밋마다 시각 테스트 툴을 이용해 UI 변경점을 쉽게 확인할 수 있다.
+
+#### 정적 타입 검사를 위한 도구 : PropTypes
+
+정적 타입 검사를 하기 위한 도구로 각 컴포넌트에서 전달 받는 props의 유효성 검사를 할 수 있다.
+
+~~~javascript
+import PropTypes from 'prop-types';
+
+class Greeting extends React.Component {
+  render() {
+    return (
+      <h1>Hello, {this.props.name}</h1>
+    );
+  }
+}
+
+Greeting.propTypes = {
+  name: PropTypes.string
+};
+~~~
+
+위 코드에서처럼 PropTypes를 선언하여 컴포넌트 간에 주고받는 props를 확인하여 사전에 버그를 예방할 수 있다. 
+또한 상세한 PropTypes 정의로 코드의 가독성을 향상 시킬 수 있다.
+
+#### 논리적인 검사를 하기 위한 도구
+
+React Component 테스트를 하기 위해서 Jest가 테스트 프레임워크로 가장 많이 사용되고 있고,
+컴포넌트 렌더링 등과 같은 동작 테스트를 위해서는 Enzyme, @testing-library/react 등과 같은 테스트 라이브러리가 사용되고 있다.
+
+#### Snapshot Test (Jest)
+
+스냅샷 테스팅은 컴포넌트를 주어진 설정으로 렌더링하고, 그 결과물을 파일로 저장한다. 
+그리고 다음에 테스트를 할 때 이전의 결과물과 일치하는지 확인하는 방식이다 .
+변경이 발생할 경우 에러를 발생시킴으로써 컴포넌트의 의도하지 않은 변경을 추적할 수 있다.
+
+#### 장점
+- 테스트를 작성하기 쉽다.
+- 의도하지 않은 변경을 빠르게 감지할 수 있다.
+  
+#### 단점
+
+- 테스트에 대한 명확한 의도를 파악하기 어렵다.
+- 테스트가 실패할 수 있는 여러 상황 중 어떤 부분에서 실패하는지 정확히 알 수 없기 때문에 그 코드를 다시 디버깅해야 하는 상황이 발생할 수 있다.
+- 테스트에 실패했을 때 버그라고 정확히 인지하지 않고, Snapshot을 업데이트할 가능성이 있다.
+
+---
 ### 8.유지보수
 
+#### 정의
+- SDLC의 마지막 단계로 소프트웨어의 생명을 연장시키는 작업
+- 소프트웨어가 개발되어 폐기될 때까지 이루어지는 일련의 소프트웨어 변경과 수정 작업
+- 소프트웨어 인도 후 결함 제거, 성능 향상, 변화된 환경에 적용하도록 소프트웨어를 변경하는 작업
+
+#### 유지보수 유형
+- 수정 유지보수: 오류의 수정
+- 적응 유지보수: 외부 환경의 변화에 적응하기 위한 수정 
+- 완전 유지보수: 기능이나 성능 향상을 위한 개선을 위한 수정
+- 예방 유지보수: 이해성과 유지보수성의 개선을 위한 수정
+
+#### 유지보수성 향상 방안
+- 소프트웨어 유지 보수의 자동화 : 소프트웨어 리엔지니어링
+- 표준화된 품질 요소의 작용
+- 규격화된 문서화의 시행
 
 ---
 #### 출처 
-[출처] : 소프트웨어 <br>
-[출처] : 소프트웨어
+
+- [출처: 소프트웨어](https://m.blog.naver.com/PostView.nhn?blogId=kyac2015&logNo=220666548899&proxyReferer=https:%2F%2Fwww.google.com%2F)
+- [출처 : 소프트웨어](http://blog.naver.com/PostView.nhn?blogId=ndb796&logNo=221113459330)
+- [출처 : SRS](https://docs.google.com/document/d/1-HANmMFbtuROYABnQ_82tPsA77XkI1BhonG7Xv0gGwg/edit#)
+- [출처 : SDS, SCS](https://rockpell.github.io/SRS,SDS,SCS/)
+- [출처 : 테스트](https://itwiki.kr/w/%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4_%ED%85%8C%EC%8A%A4%ED%8A%B8_%EC%9B%90%EB%A6%AC)
+- [출처 : react test](https://velog.io/@danbii/React%EC%97%90%EC%84%9C-Test%ED%95%98%EA%B8%B0)
+- [출처 : 유지보수](https://booolean.tistory.com/580)
+- [출처 : 유지보수](https://middleware.tistory.com/entry/%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4-%EC%9C%A0%EC%A7%80%EB%B3%B4%EC%88%98-%EA%B0%9C%EC%9A%94)
